# cuda_project

./: README.md  report1.md  todo.md
cppapplication/: CMakeLists.txt  Dockerfile  README.md
cppapplication/src/: box.cpp  intersect_visitor.cpp  intersect_visitor.hpp  intersectable.hpp  main.cpp  mesh.cpp  mesh.hpp  obj.cpp  obj.hpp  print_util.hpp  ray.cpp  ray.hpp  sphere.cpp  sphere.hpp  triangle.cpp  triangle.hpp  util.hpp
cppapplication/src/shapes/: mesh.hpp  sphere.cpp  sphere.hpp  triangle.cpp  triangle.hpp
cppapplication/src/utils/: intersect.cpp  intersect.hpp  load_mesh.cpp  load_mesh.hpp  main_util.hpp  matrix.hpp  obj.cpp  obj.hpp  ray.hpp  util.hpp
cppapplication/tests/: testgen.py
cudaApplication/: CMakeLists.txt  Dockerfile  README.md
cudaApplication/src/: cuda_rt.cu  cuda_rt.cuh  main.cu
cudaApplication/src/shapes/: mesh.cu  mesh.cuh  sphere.cu  sphere.cuh  triangle.cu  triangle.cuh
cudaApplication/src/utils/: ascii_print.cpp  ascii_print.hpp  bvh.cu  bvh.cuh  cuda_rt_util.cu  cuda_rt_util.cuh  intersect.cu  intersect.cuh  load_mesh.cu  load_mesh.cuh  main_util.cuh  main_util.hpp  matrix.cuh  ray.cu  ray.cuh  util.cuh  util.hpp
